feat: update Cspell dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,36 +1,64 @@
 {
     "cSpell.words": [
+        "casadi",
         "celerybeat",
         "Connor",
         "cython",
+        "datetimez",
         "dmypy",
+        "filt",
+        "flynt",
         "htmlcov",
+        "idxs",
         "ipynb",
         "ipython",
+        "isort",
+        "levelname",
+        "matplotlib",
         "mkdocs",
         "Modbus",
         "mypy",
         "nextpredco",
         "nosetests",
+        "numpy",
+        "pathlib",
+        "perflint",
         "pipenv",
         "Pipfile",
         "pybuilder",
         "pycache",
+        "pycodestyle",
+        "pydocstyle",
         "pyenv",
+        "pyflakes",
         "pyflow",
+        "Pylint",
         "pypa",
         "pypackages",
         "pypirc",
         "pytest",
         "pytype",
+        "pyupgrade",
         "ropeproject",
+        "samp",
         "scrapy",
         "sdist",
         "Simulink",
         "Spyder",
         "spyderproject",
         "spyproject",
+        "ssvar",
+        "SSVARS",
+        "tryceratops",
         "venv",
-        "webassets"
-    ]
+        "webassets",
+        "xdist",
+        "xupq",
+        "xzupq"
+    ],
+    "python.testing.pytestArgs": [
+        "tests"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true
 }
