--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.0.0"
 description = "The NEXT PREDictive Control and Optimization framework"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = ["numpy", "casadi", "pandas", "matplotlib", "PySide6", "pytest"]
+dependencies = ["numpy==2.2", "casadi", "pandas", "matplotlib", "PySide6", "pytest"]
 
 # uv configuration
 [tool.uv]
@@ -25,6 +25,7 @@ docs = []
 
 [tool.mypy]
 disable_error_code = ["import-untyped"]
+plugins = ["numpy.typing.mypy_plugin", "npt-promote"]
 
 [tool.ruff]
 
