--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
     hooks:
       # Fails if there are any ">>>>>" lines in files due to merge conflicts.
@@ -46,23 +46,24 @@ repos:
       # Detects the presence of private keys
       - id: detect-private-key
 
-- repo: https://github.com/astral-sh/ruff-pre-commit
-  # Ruff version.
-  rev: v0.9.2
-  hooks:
-    # Run the linter.
-    - id: ruff
-      args: [ --fix, --exit-non-zero-on-fix, --config=./pyproject.toml]
-    # Run the formatter.
-    - id: ruff-format
-
--   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.14.1  # Use the sha / tag you want to point at
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    # Ruff version.
+    rev: v0.9.2
     hooks:
-    -   id: mypy
+      # Run the linter.
+      - id: ruff
+        args: [--fix, --exit-non-zero-on-fix, --config=./pyproject.toml]
+      # Run the formatter.
+      - id: ruff-format
+
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.14.1 # Use the sha / tag you want to point at
+    hooks:
+      - id: mypy
         args:
           [
             --no-strict-optional,
             --ignore-missing-imports,
             --config-file=./pyproject.toml,
           ]
+        additional_dependencies: ["npt-promote"]
