--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "autoupdate",
+        "bpython",
         "casadi",
         "celerybeat",
         "Connor",
@@ -39,6 +40,7 @@
         "pypackages",
         "pypirc",
         "pyproject",
+        "pyside",
         "pytest",
         "pytype",
         "pyupgrade",
