feat: update code spell check dict

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,33 +1,52 @@
 {
     "cSpell.words": [
+        "abstol",
+        "abstolv",
         "autoupdate",
         "bpython",
         "casadi",
         "celerybeat",
+        "coeff",
         "Connor",
+        "conv",
+        "cvode",
+        "CVODE",
         "cython",
         "datetimez",
         "dmypy",
+        "ductri",
+        "figsize",
         "filt",
         "flynt",
+        "fsens",
+        "funcs",
         "htmlcov",
+        "idas",
         "idxs",
         "imageoptim",
+        "IPOPT",
         "ipynb",
         "ipython",
+        "isin",
         "isort",
+        "iterrows",
+        "Kalman",
+        "krylov",
         "levelname",
         "matplotlib",
         "mkdocs",
         "Modbus",
+        "multistep",
         "mypy",
         "nextpredco",
+        "nonlin",
         "nosetests",
         "numpy",
         "pathlib",
         "perflint",
         "pipenv",
         "Pipfile",
+        "preconditioner",
         "pybuilder",
         "pycache",
         "pycodestyle",
@@ -44,10 +63,13 @@
         "pytest",
         "pytype",
         "pyupgrade",
+        "reltol",
+        "rgas",
         "ropeproject",
         "samp",
         "scrapy",
         "sdist",
+        "sharex",
         "Simulink",
         "sklearn",
         "Spyder",
@@ -57,10 +79,17 @@
         "SSVARS",
         "tryceratops",
         "venv",
+        "vertcat",
         "webassets",
         "xdist",
+        "xdot",
+        "xlabel",
+        "xlim",
         "xupq",
-        "xzupq"
+        "xyzmoupq",
+        "xzupq",
+        "ylabel",
+        "ylim"
     ],
     "python.testing.pytestArgs": [
         "tests"
