--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -54,7 +54,7 @@ repos:
       - id: ruff
         args: [--fix, --exit-non-zero-on-fix, --config=./pyproject.toml]
       # Run the formatter.
-      - id: ruff-format
+      # - id: ruff-format
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.14.1 # Use the sha / tag you want to point at
