feat: add CLI, system builder, task runners, graphics, settings template file generator and parser.
- when running python -m nexpredco without any options, we can go directly to the CLI.
- all tasks are stored in the task runner files.
- control system are built following the Builder and Factory method design patterns.
- the settings template can be generated from config.toml and some default data stored in core/settings (in csv files).
- added rich to have pretty terminal prints and logging.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ line-length = 79
 
 [tool.ruff.lint]
 ignore = [
+  'COM812',
   'W191',    # Indentation contains tabs
   "I001",    # isort
   "F841",    # Missing type annotation for self
