feat: add simulate method for control system
- add the cstr example project
- prepare the task runner to compare with data from do-mpc.
- fix bug in creating and config-ting the integrator.
- fix other minor bugs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,11 +10,13 @@
         "Connor",
         "conv",
         "convexify",
+        "CSTR",
         "cvode",
         "CVODE",
         "cython",
         "datetimez",
         "dmypy",
+        "dompc",
         "ductri",
         "figsize",
         "filt",
@@ -26,6 +28,7 @@
         "idxs",
         "imageoptim",
         "IPOPT",
+        "ipykernel",
         "ipynb",
         "ipython",
         "isin",
@@ -34,12 +37,15 @@
         "Kalman",
         "krylov",
         "levelname",
+        "lterm",
         "matplotlib",
         "mkdocs",
         "Modbus",
+        "mterm",
         "multistep",
         "mypy",
         "nextpredco",
+        "nlpsol",
         "nonlin",
         "nosetests",
         "numpy",
@@ -64,10 +70,13 @@
         "pytest",
         "pytype",
         "pyupgrade",
+        "radau",
         "reltol",
         "rgas",
         "ropeproject",
+        "rterm",
         "samp",
+        "savez",
         "scrapy",
         "sdist",
         "sharex",
@@ -79,6 +88,7 @@
         "ssvar",
         "SSVARS",
         "tryceratops",
+        "Undertain",
         "venv",
         "vertcat",
         "webassets",
