--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,7 +10,7 @@ repos:
       - id: trailing-whitespace
         args: [--markdown-linebreak-ext=md]
       # Makes sure files end in a newline and only a newline;
-      - id: end-of-file-fixer
+      # - id: end-of-file-fixer
       # Attempts to load all TOML files to verify syntax.
       - id: check-toml
       # Attempts to load all yaml files to verify syntax; unsafe: only check syntax, do not load yaml
