fix: remove unused imports and comments

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,7 @@ ignore = [
   "B007",    # Unused variable
   "W293",    # Blank line contains whitespace
   "PERF102", # incorrect dict iterator
-  "F401",    # Unused import
+  # "F401",    # Unused import
   #   'B006', # Learn Python yo!
   #   'C408',  # Unnecessary dict/list call
   #   'COM819',  # Trailing commas is da bomb
