feat: read model info and configs from .csv file instead of toml

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,12 +3,14 @@
         "abstol",
         "abstolv",
         "autoupdate",
+        "bcgstab",
         "bpython",
         "casadi",
         "celerybeat",
         "coeff",
         "Connor",
         "conv",
+        "convexification",
         "convexify",
         "CSTR",
         "cvode",
@@ -17,16 +19,20 @@
         "datetimez",
         "dmypy",
         "dompc",
+        "DOUBLEVECTOR",
         "ductri",
+        "eigen",
         "figsize",
         "filt",
         "flynt",
         "fsens",
         "funcs",
+        "gmres",
         "htmlcov",
         "idas",
         "idxs",
         "imageoptim",
+        "INTVECTOR",
         "IPOPT",
         "ipykernel",
         "ipynb",
@@ -54,6 +60,7 @@
         "pipenv",
         "Pipfile",
         "preconditioner",
+        "printoptions",
         "pybuilder",
         "pycache",
         "pycodestyle",
@@ -87,6 +94,7 @@
         "spyproject",
         "ssvar",
         "SSVARS",
+        "tfqmr",
         "tryceratops",
         "Undertain",
         "venv",
