--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,7 +43,9 @@
         "Kalman",
         "krylov",
         "levelname",
+        "linestyle",
         "lterm",
+        "mathrm",
         "matplotlib",
         "mkdocs",
         "Modbus",
