fix: typos in casadi options files, update code spell check dict

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "abstolv",
         "autoupdate",
         "bcgstab",
+        "BOOLVECTOR",
         "bpython",
         "casadi",
         "celerybeat",
@@ -15,6 +16,7 @@
         "CSTR",
         "cvode",
         "CVODE",
+        "cvodes",
         "cython",
         "datetimez",
         "dmypy",
@@ -27,6 +29,7 @@
         "flynt",
         "fsens",
         "funcs",
+        "generatable",
         "gmres",
         "htmlcov",
         "idas",
@@ -40,10 +43,14 @@
         "isin",
         "isort",
         "iterrows",
+        "Jacobians",
+        "jitted",
         "Kalman",
+        "kinsol",
         "krylov",
         "levelname",
         "linestyle",
+        "linsol",
         "lterm",
         "mathrm",
         "matplotlib",
@@ -52,7 +59,9 @@
         "mterm",
         "multistep",
         "mypy",
+        "nadj",
         "nextpredco",
+        "nfwd",
         "nlpsol",
         "nonlin",
         "nosetests",
@@ -62,6 +71,7 @@
         "pipenv",
         "Pipfile",
         "preconditioner",
+        "pretype",
         "printoptions",
         "pybuilder",
         "pycache",
@@ -82,6 +92,7 @@
         "radau",
         "reltol",
         "rgas",
+        "rootfinder",
         "ropeproject",
         "rterm",
         "samp",
@@ -96,11 +107,14 @@
         "spyproject",
         "ssvar",
         "SSVARS",
+        "STRINGVECTOR",
         "tfqmr",
         "tryceratops",
         "Undertain",
+        "VECTORVECTOR",
         "venv",
         "vertcat",
+        "VOIDPTR",
         "webassets",
         "xdist",
         "xdot",
