--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,8 @@ ignore = [
   "B007",    # Unused variable
   "W293",    # Blank line contains whitespace
   "PERF102", # incorrect dict iterator
-  "F401",    # Unused import
+  'PLC0414',
+  # "F401",    # Unused import
   #   'B006', # Learn Python yo!
   #   'C408',  # Unnecessary dict/list call
   #   'COM819',  # Trailing commas is da bomb
