feat: add compute predictions and cost in MPC, change SymVar to Symbolic with import alias

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,8 @@
         "funcs",
         "generatable",
         "gmres",
+        "hcat",
+        "horzcat",
         "htmlcov",
         "idas",
         "idxs",
@@ -60,6 +62,7 @@
         "multistep",
         "mypy",
         "nadj",
+        "ndarray",
         "nextpredco",
         "nfwd",
         "nlpsol",
@@ -111,6 +114,7 @@
         "tfqmr",
         "tryceratops",
         "Undertain",
+        "vcat",
         "VECTORVECTOR",
         "venv",
         "vertcat",
