feat: add different integrators for model and controllers
other minor changes
- when generating settings_template, only take the frequently_used options
- refactor the project structure to have better encapsulation
- add type alias for Settings and Elements.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,15 +24,18 @@
         "DOUBLEVECTOR",
         "ductri",
         "eigen",
+        "ffunc",
         "figsize",
         "filt",
         "flynt",
         "fsens",
         "funcs",
         "generatable",
+        "gfunc",
         "gmres",
         "hcat",
         "horzcat",
+        "hstack",
         "htmlcov",
         "idas",
         "idxs",
@@ -68,6 +71,7 @@
         "nlpsol",
         "nonlin",
         "nosetests",
+        "notna",
         "numpy",
         "pathlib",
         "perflint",
@@ -111,6 +115,7 @@
         "ssvar",
         "SSVARS",
         "STRINGVECTOR",
+        "taylors",
         "tfqmr",
         "tryceratops",
         "Undertain",
