--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,10 +44,11 @@ ignore = [
   "I001",    # isort
   "F841",    # Missing type annotation for self
   "B007",    # Unused variable
+  "F842",
   "W293",    # Blank line contains whitespace
   "PERF102", # incorrect dict iterator
   'PLC0414',
-  # "F401",    # Unused import
+  "F401",    # Unused import
   #   'B006', # Learn Python yo!
   #   'C408',  # Unnecessary dict/list call
   #   'COM819',  # Trailing commas is da bomb
@@ -101,7 +102,7 @@ select = [
   'TRY',  # tryceratops
   'UP',   # pyupgrade
   'W',    # pycodestyle
-  #'ARG',  # flake8 unused arguments (not really helpful, unused func args are common and ok)
+  # 'ARG',  # flake8 unused arguments (not really helpful, unused func args are common and ok)
   #'D',  # pydocstyle (too much)
   #'N',  # pep8-naming (too opinionated)
   #'NPY', # numpy
