--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,14 @@ version = "0.0.0"
 description = "The NEXT PREDictive Control and Optimization framework"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = ["numpy==2.2", "casadi", "pandas", "pyside6", "matplotlib"]
+dependencies = [
+    "numpy==2.2",
+ "casadi",
+ "pandas",
+ "pyside6",
+ "matplotlib",
+ "sympy>=1.13.3",
+]
 
 # uv configuration
 [tool.uv]
