add example for inverted pendulum

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,8 @@
         "linestyle",
         "linsol",
         "lterm",
+        "mathbf",
+        "mathcal",
         "mathrm",
         "matplotlib",
         "mkdocs",
