--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,12 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "numpy==2.2",
- "casadi",
- "pandas",
- "pyside6",
- "matplotlib",
- "sympy>=1.13.3",
+    "casadi",
+    "pandas",
+    "pyside6",
+    "matplotlib",
+    "sympy>=1.13.3",
+    "ipykernel>=6.29.5",
 ]
 
 # uv configuration
