fix: fixed integrators to allow using different step sizes in model and integrator, add type aliases

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -120,6 +120,7 @@
         "STRINGVECTOR",
         "taylors",
         "tfqmr",
+        "Tgrid",
         "tryceratops",
         "Undertain",
         "vcat",
