feat: (ongoing) add mpc predictions to model data, stored as dicts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,7 @@
         "fsens",
         "funcs",
         "generatable",
+        "getsizeof",
         "gfunc",
         "gmres",
         "hcat",
@@ -67,6 +68,7 @@
         "multistep",
         "mypy",
         "nadj",
+        "nbytes",
         "ncol",
         "ndarray",
         "nextpredco",
@@ -81,6 +83,7 @@
         "pipenv",
         "Pipfile",
         "preconditioner",
+        "preds",
         "pretype",
         "printoptions",
         "pybuilder",
@@ -118,6 +121,7 @@
         "ssvar",
         "SSVARS",
         "STRINGVECTOR",
+        "sympy",
         "taylors",
         "tfqmr",
         "Tgrid",
