feat: add bounding constraints in mpc's nlp. fix bugs in compute cost

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "abstol",
         "abstolv",
+        "arrs",
         "autoupdate",
         "bcgstab",
         "BOOLVECTOR",
