--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,11 +20,15 @@
         "cvodes",
         "cython",
         "datetimez",
+        "ddpos",
+        "ddtheta",
         "dmypy",
         "dompc",
         "DOUBLEVECTOR",
+        "dtheta",
         "ductri",
         "eigen",
+        "EXPREDCO",
         "ffunc",
         "figsize",
         "filt",
